--- a/SourceCode/StreamFile/App.config
+++ b/SourceCode/StreamFile/App.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
+    <add key="LeaveConsoleOpen" value="true" />
+    <add key="DefaultBufferSize" value="4096" />
   </appSettings>
   <connectionStrings>
     <add name="Main" connectionString="Data Source=localhost;Initial Catalog=StreamFile;User ID=StreamFile;Password=password;"/>
