--- a/SourceCode/StreamFile/StreamFile.csproj
+++ b/SourceCode/StreamFile/StreamFile.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationInfo.cs" />
+    <Compile Include="AppSettings.cs" />
     <Compile Include="DataAccess.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Program.cs" />
